# climpy

./: README.md  demo_notebook.ipynb  demo_notebook_real_data.ipynb  generate_test_data.py  pyproject.toml  requirements.txt
climpy/: __init__.py  data.py  ops.py  plot.py  style.py
climpy/analysis/: __init__.py  cca.py  correlation.py  eof.py  regression.py
examples/: example_cca.py  example_corr_regression.py  example_eof.py  example_preprocess.py
