[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "climpy"
version = "0.2.0"
description = "Climate data preprocessing, analysis and publication-quality plotting."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["climpy*"]
